--- a/public/webview.html
+++ b/public/webview.html
@@ -1,6 +1,5 @@
 <html style="height: 100%;">
-<body style="height: 100%;">
-<iframe src="http://localhost:3001/d/${fileName}/editor" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
-        width="100%" height="100%"></iframe>
-</body>
+    <body style="height: 100%;">
+        <iframe frameborder="0" id="grafana-frame" src="http://localhost:3001/d/${fileName}/editor" sandbox="allow-same-origin allow-scripts allow-popups allow-forms" width="100%" height="100%"></iframe>
+    </body>
 </html>
