--- a/public/webview.html
+++ b/public/webview.html
@@ -1,5 +1,5 @@
 <html style="height: 100%;">
     <body style="height: 100%;">
-        <iframe frameborder="0" id="grafana-frame" src="http://localhost:3000/d-embed?json=${json}" sandbox="allow-same-origin allow-scripts allow-popups allow-forms" width="100%" height="100%"></iframe>
+        <iframe frameborder="0" id="grafana-frame" src="http://localhost:3000/d-embed?json=${json}&callbackUrl=localhost:3001/save-dashboard" sandbox="allow-same-origin allow-scripts allow-popups allow-forms" width="100%" height="100%"></iframe>
     </body>
 </html>
