--- a/public/error.html
+++ b/public/error.html
@@ -3,6 +3,6 @@ h1, p {
     color: white;
 }
 </style>
-<h1>A problem occurred connecting to Grafana</h1><p>${error}</p>
+<h1>A problem occurred connecting to Grafana</h1>${error}
 <p><button onclick="location.reload()">refresh</button></p>
 
