Support grizzly resources

--- a/public/error.html
+++ b/public/error.html
@@ -20,6 +20,6 @@ if (queryParams.includes("theme=dark")) {
     style("dark-gray", "light-gray");
 }
 </script>
-<h1>A problem occurred connecting to Grafana</h1>${error}
+<h1>A problem occurred while connecting to Grafana</h1>${error}
 <p><button onclick="location.reload()">refresh</button></p>
 
